fixed spacing between areas

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -12,5 +12,6 @@ body {
 	padding: 5px 0;
   font-size: 30px;
 	clear: both;
+  overflow: auto;
 	font-family: 'Roboto Mono', monospace;
 }
