--- a/scss/_technologies.scss
+++ b/scss/_technologies.scss
@@ -18,6 +18,7 @@
 
 @media(max-width: 1000px) {
 	.technologies {
+		height: 460px;
 		width: 460px;
 		.tech-list {
 			li {
@@ -33,6 +34,7 @@
 
 @media(max-width: 460px) {
 	.technologies {
+		height: 900px;
 		width: 230px;
 	}
 }
